@@ -219,10 +219,6 @@ public class GraphHopperBundle implements ConfiguredBundle<GraphHopperBundleConf
             }
         });
 
-        if (configuration.getGraphHopperConfiguration().getBool("web.change_graph.enabled", false)) {
-            environment.jersey().register(ChangeGraphResource.class);
-        }
-
         environment.jersey().register(MVTResource.class);
         environment.jersey().register(NearestResource.class);
         environment.jersey().register(RouteResource.class);
